# ng_2511

./: README.md
backend/: .env.example  .gitignore  README.md  compose.yml  mypy.ini  pyproject.toml
backend/.devcontainer/: Dockerfile  devcontainer.json
backend/app/: db.py  main.py  models.py  schemas.py
backend/app/api/v1/: all_images.py  diaries.py  images.py  router.py
backend/app/core/: lifespan.py
backend/app/models/: __init__.py  diary.py  image.py  user.py
backend/app/schemas/: diary.py  image.py
backend/app/utils/: date.py  generate_diary_score.py  generate_image.py  image.py  scoring.py
backend/db/init/: 01_init.sql
frontend/: .dockerignore  Dockerfile  README.md  docker-compose.yml
frontend/diary/: fastapi_cors_example.py  next.config.ts  package-lock.json  package.json
frontend/diary/src/api/: diaries.ts  images.ts
frontend/diary/src/app/: globals.css  layout.tsx  page.tsx  static.tsx  utils.tsx
frontend/diary/src/app/create/: page.tsx
frontend/diary/src/app/diaries/: api.ts  page.tsx
frontend/diary/src/app/diaries/components/: Calendar.tsx  DiaryList.tsx
frontend/diary/src/app/edit/[date]/: page.tsx  type.ts
frontend/diary/src/app/gallery/: page.tsx
frontend/diary/src/app/gallery/components/: DiaryCard.tsx  DiaryDisplay.tsx  GalleryHeader.tsx  GalleryImage.tsx  GallerySlider.tsx  GalleryStates.tsx  ImageDisplay.tsx  StatusDisplay.tsx
frontend/diary/src/app/upload_image/: page.tsx
frontend/diary/src/components/: Navigation.tsx
frontend/diary/src/data/: mockDiaries.ts
frontend/diary/src/types/: index.ts
frontend/diary/src/utils/: dateFormat.ts
