[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# ここで「どのディレクトリがパッケージか」を明示
packages = ["app"]

[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pymysql>=1.1.0",
  "pydantic>=2.8.0",
  "watchfiles>=0.21.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "ruff>=0.6.0",
  "types-PyMySQL"
]

[tool.mypy]
python_version = "3.12"
packages = ["app"]
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true
