[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# どのディレクトリがパッケージかを明示
packages = ["app"]

[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pymysql>=1.1.0",
  "pydantic>=2.8.0",
  "watchfiles>=0.21.0",
  "cloudinary>=1.44.1",
  "python-multipart>=0.0.20",
  "google-genai>=1.43.0",
  "python-dotenv>=1.1.1",
  "pillow>=11.3.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "ruff>=0.6.0",
  "types-PyMySQL"
]

[tool.mypy]
python_version = "3.12"
packages = ["app"]
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
plugins = [
  "pydantic.mypy",                          # Pydantic v2 プラグイン
  "sqlalchemy.ext.mypy.plugin"              # SQLAlchemy プラグイン
]
pretty = true

[tool.pydantic-mypy]
# 必須ではないが推奨（v2対応）
init_forbid_extra = true
warn_untyped_fields = true

[tool.ruff]
# ランタイムに合わせて変更（例: "py311" / "py310"）
target-version = "py311"
line-length = 100
# Ruff を“唯一の”フォーマッタとして使う場合は true（Black不要）
fix = true

[tool.ruff.lint]
# 基本セット + import整列(I) + 便利系少し
select = ["E", "F", "W", "UP", "B", "I"]
# 不要ならここに ignore を追加: ignore = ["E501"]

[tool.ruff.format]
# Black 風のデフォルトでOK。好みで調整
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true
